# bitfactory

./: LICENSE  README.md  pyproject.toml
.github/workflows/: poetry_pytest.yml  pylint.yml  pytest.yml  release.yml
bitfactory/: __init__.py  bitfactory.py  exceptions.py  protobuf.py
tests/: test_bitfactory.py
