[tool.poetry]
name = "bitfactory"
version = "0.1.0"
description = "Create structured binary data easily."
authors = ["Nyz <nyz@bearswithsa.ws>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.15.5"
bandit = "^1.7.5"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
ruff = "^0.0.292"
pycln = "^2.2.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGE CONTROL"]
# W0212: Access to a protected member, resolve this at some point
disable = "C0116,R0902,W0212"